gestion des unites mesure et correction bugs